@@ -840,6 +840,7 @@ static int nut_libusb_open(libusb_device_handle **udevp,
 				"requested criteria",
 				count_open_attempts - count_open_errors);
 		}
+		suggest_NDE_conflict();
 	}
 
 #ifdef WIN32
